--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Index.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Index.razor
@@ -1,5 +1,16 @@
 ﻿@page "/"
+@using System.Net.Mail
+@using System.Net
 
 <h1>Welcome to MAAD:s WorkerCenter</h1>
+
+
+@code{
+        
+}
+
+
+
+
 
 
