--- a/NewBlazorTodo/NewBlazorTodo/Client/Shared/MainLayout.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Shared/MainLayout.razor
@@ -6,10 +6,10 @@
 
 <div class="main">
     <div class="top-row px-4">
-        <a href="http://blazor.net" target="_blank" class="ml-md-auto">About</a>
+        <a href="/" class="ml-md-auto">Home</a>
     </div>
 
-    <div class="content px-4">
+    <div class="content px-4 container">
         @Body
     </div>
 </div>
