--- a/NewBlazorTodo/NewBlazorTodo/Client/wwwroot/css/app.css
+++ b/NewBlazorTodo/NewBlazorTodo/Client/wwwroot/css/app.css
@@ -47,11 +47,11 @@ app {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-image: linear-gradient(180deg, rgba(1, 90, 101, 0.89) 30%, rgb(97, 70, 35) 100%);
 }
 
     .sidebar .top-row {
-        background-color: rgba(0,0,0,0.4);
+        background-color: #1e1e1e;
     }
 
     .sidebar .navbar-brand {
@@ -88,12 +88,12 @@ app {
         }
 
             .sidebar .nav-item a.active {
-                background-color: rgba(255,255,255,0.25);
+                background-color: rgba(31, 255, 255, 0.08);
                 color: white;
             }
 
             .sidebar .nav-item a:hover {
-                background-color: rgba(255,255,255,0.1);
+                background-color: rgb(97, 70, 35);
                 color: white;
             }
 
@@ -191,11 +191,10 @@ app {
     color: black;
 }
 
-.HideButton{
-    display: none;
+.myDiv {
+    border: 5px outset red;
+    background-color: lightblue;
+    text-align: center;
 }
 
-.ShowButton {
-    display: normal;
-}
 
