--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Index.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Index.razor
@@ -2,7 +2,8 @@
 @using System.Net.Mail
 @using System.Net
 
-<h1>Welcome to MAAD:s WorkerCenter</h1>
+<h1>MAAD TechCenter for Developers</h1>
+<h2>Enjoy life and make your future...</h2>
 
 
 @code{
