--- a/NewBlazorTodo/NewBlazorTodo/Client/Pages/Operator/FetchData.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Pages/Operator/FetchData.razor
@@ -23,32 +23,28 @@ else
         <thead>
             <tr>
                 <th>Id</th>
-                <th>UserName</th>
-                <th>Password</th>
-                <th>FirstName</th>
-                <th>LastName</th>
+                <th>First Name</th>
+                <th>Last Name</th>
                 <th>Email</th>
                 <th>Phone</th>
-                <th>Location</th>
             </tr>
         </thead>
         <tbody>
             @foreach (Operators o in techOp)
             {
-            <tr>
-                <td>@o.Id</td>
-                <td>@o.UserName</td>
-                <td>@o.Password</td>
-                <td>@o.FirstName</td>
-                <td>@o.LastName</td>
-                <td>@o.Email</td>
-                <td>@o.Phone</td>
-                <td>@o.Location</td>
-                <td>
-                    <a class="btn btn-success" href="operator/edit/@o.Id">Edit</a>
-            <button class="btn btn-danger" @onclick="@(() => Delete(o.Id))">Delete</button>
+                <tr>
+                    <td>@o.Id</td>
+                    <td>@o.FirstName</td>
+                    <td>@o.LastName</td>
+                    <td>@o.Email</td>
+                    <td>@o.Phone</td>
+                    <td>
+                        <a class="btn btn-success" href="operator/details/@o.Id">View</a>
+                        @*<a class="btn btn-success" href="operator/edit/@o.Id">Edit</a>*@
+                        @*<button class="btn btn-danger" @onclick="@(() => Delete(o.Id))">Delete</button>*@
+
                 </td>
-            </tr>
+                </tr>
             }
 
         </tbody>
@@ -61,13 +57,13 @@ else
         techOp = await client.GetFromJsonAsync<Operators[]>("https://localhost:44374/api/operators");
     }
 
-    async Task Delete(int id)
-    {
-        var _operators = this.techOp.First(x => x.Id == id);
-        if (await js.InvokeAsync<bool>("confirm", $"Do you want to delete {_operators.FirstName}'s with ID: ({_operators.Id}) Record?"))
-        {
-            await client.DeleteAsync($"https://localhost:44374/api/operators/ {id}");
-            await OnInitializedAsync();
-        }
-    }
+    //async Task Delete(int id)
+    //{
+    //    var _operators = this.techOp.First(x => x.Id == id);
+    //    if (await js.InvokeAsync<bool>("confirm", $"Do you want to delete {_operators.FirstName}'s with ID: ({_operators.Id}) Record?"))
+    //    {
+    //        await client.DeleteAsync($"https://localhost:44374/api/operators/ {id}");
+    //        await OnInitializedAsync();
+    //    }
+    //}
 }
