--- a/NewBlazorTodo/NewBlazorTodo/Client/Shared/NavMenu.razor
+++ b/NewBlazorTodo/NewBlazorTodo/Client/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">NewBlazorTodo</a>
+    <a class="navbar-brand" href="">MAAD</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -24,24 +24,9 @@
         </li>      
 
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" @onclick="()=>expandSubMenuTwo= !expandSubMenuTwo">
+            <NavLink class="nav-link" href="/admin">
                 <span class="oi oi-people" aria-hidden="true"></span> Admins
-            </NavLink>
-            @if (expandSubMenuTwo)
-            {
-                <ul class="nav flex-column">
-                    <li class="nav-item px-3">
-                        <NavLink class="nav-link" href="/admin/create">
-                            <span class="oi oi-person" aria-hidden="true"></span> Create Admin
-                        </NavLink>
-                    </li>
-                    <li class="nav-item px-3">
-                        <NavLink class="nav-link" href="/admin">
-                            <span class="oi oi-people" aria-hidden="true"></span> View Admins
-                        </NavLink>
-                    </li>                   
-                </ul>
-            }
+            </NavLink>          
         </li>
 
         <li class="nav-item px-3">
@@ -63,7 +48,7 @@
                     </li>
                     <li class="nav-item px-3">
                         <NavLink class="nav-link" href="ordershistory">
-                            <span class="oi oi-arrow-right" aria-hidden="true"></span> History
+                            <span class="oi oi-british-pound" aria-hidden="true"></span> Skicka Faktura
                         </NavLink>
                     </li>
                 </ul>
